err/repoze.obob.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteScript-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/WSGIUtils-0.7.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/script'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package/+package+'...
Listing './lib/python3.5/site-packages/paste/script/util'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/obob'...
Compiling './lib/python3.5/site-packages/repoze/obob/publisher.py'...
***   File "./lib/python3.5/site-packages/repoze/obob/publisher.py", line 98
    raise t, v, tb
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/repoze/obob/templates'...
Listing './lib/python3.5/site-packages/repoze/obob/templates/newbob_skel'...
Listing './lib/python3.5/site-packages/repoze/obob/templates/newbob_skel/+package+'...
Listing './lib/python3.5/site-packages/repoze/obob/tests'...
Listing './lib/python3.5/site-packages/repoze.obob-0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wsgiutils'...
Compiling './lib/python3.5/site-packages/wsgiutils/SessionClient.py'...
***   File "./lib/python3.5/site-packages/wsgiutils/SessionClient.py", line 126
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiutils/SessionServer.py'...
***   File "./lib/python3.5/site-packages/wsgiutils/SessionServer.py", line 58
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiutils/wsgiAdaptor.py'...
***   File "./lib/python3.5/site-packages/wsgiutils/wsgiAdaptor.py", line 249
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiutils/wsgiServer.py'...
***   File "./lib/python3.5/site-packages/wsgiutils/wsgiServer.py", line 135
    except socket.error, socketErr:
                       ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
